NP-46967-brage-merging-handle-multiple-duplicates (#1709)
* NP-46967-brage-merging-handle-multiple-duplicates, implemented

* NP-46967-brage-merging-handle-multiple-duplicates, codacy

* NP-46967-brage-merging-handle-multiple-duplicates, found logical error